<resources>
    <string name="app_name">Foursquare Newcomers</string>
    <string name="action_settings">Settings</string>
    <string name="text_mobile">Mobile:</string>
    <string name="text_office_tel">Office Tel:</string>
    <string name="text_title">Title:</string>
    <string name="text_full_name">Full Name:</string>
    <string name="text_home_address">Home Address:</string>
    <string name="text_home_tel">Home Tel:</string>
    <string name="text_email_address">Email Address:</string>
    <string name="text_how_find">How did you find out about us:</string>
    <string name="text_birthday">Birthday:</string>
    <string name="text_spiritual_rebirth_date">Spiritual Rebirth Date:</string>
    <string name="text_age_group">Age Group:</string>
    <string name="text_my_decision_today">My decision today:</string>
    <string name="text_comments_prayer_points">Comments/Prayer Points:</string>
    <string name="button_close">Close</string>
    <string name="text_commit_life">I want to commit my life to Christ.</string>
    <string name="text_renew_commitment">I want to renew my commitment to Christ.</string>
    <string name="text_want_baptized">I want to be baptized.</string>
    <string name="text_talk_pastorate">I want to talk to members of the pastorate.</string>
    <string name="text_member_church">I want to become a member of this Church.</string>
    <string name="text_discover_maturity">I want to discover spiritual maturity.</string>
    <string name="text_discover_ministry">I want to discover my ministry.</string>
    <string name="text_date">Date</string>
    <string name="button_update">Update</string>
    <string name="text_select_date">Select Date</string>
    <string name="text_records_by_date">Records by Date</string>
</resources>
