<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.inveniotechnologies.neophyte.ui.EditPerson">

    <ScrollView
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_date" />

            <Button
                android:id="@+id/btn_select_save_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_title" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/cmb_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/titlesList"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_full_name" />

            <EditText
                android:id="@+id/txt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_home_address" />

            <EditText
                android:id="@+id/txt_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete|textMultiLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_mobile" />

            <EditText
                android:id="@+id/txt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_home_tel" />

            <EditText
                android:id="@+id/txt_home_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_office_tel" />

            <EditText
                android:id="@+id/txt_office_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_email_address" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_how_find" />

            <EditText
                android:id="@+id/txt_how_you_found_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete|textAutoCorrect|textMultiLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_birthday" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_day"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:hint="Day"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/txt_month"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="Month"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_spiritual_rebirth_date" />

            <Button
                android:id="@+id/btn_spiritual_rebirth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_select_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_age_group" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/cmb_age_group"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/ageGroupList"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_my_decision_today" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_commit_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_commit_life" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_renew_commitment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_renew_commitment" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_be_baptized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_want_baptized" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_talk_pastorate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_talk_pastorate" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_become_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_member_church" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_discover_maturity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_discover_maturity" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_discover_ministry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_discover_ministry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_comments_prayer_points" />

            <EditText
                android:id="@+id/txt_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete|textAutoCorrect|textMultiLine" />

            <Button
                android:id="@+id/btn_update_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:text="@string/button_update"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
